style: buying ui looking slick now

--- a/assets/100years.html
+++ b/assets/100years.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+
   <header>
     <h1>Millionaire Tycoon </h1>
     <div class="totalBalance">
@@ -53,10 +54,9 @@
     </div>
   </header>
 
-
-
   <!-- buy/sell -->
   <div class="left-container">
+
 
     <div class="row">
       <div class="title">Stock Symbol:</div>
@@ -94,12 +94,20 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="title">Total Price:</div>
+      <div class="bar">
+        <div id="totalPrice"></div>
+      </div>
+    </div>
 
-    <div id="totalPrice"></div>
+
+
 
     <div id="commitTransaction">
       <button onclick="commitPurchaseJS()" id="commitButton">Commit</button>
     </div>
+    <img id="arrows" src="—Pngtree—blue gradient financial arrow_6489125.png" alt="Image Description">
 
   </div>
 
