--- a/assets/100years.html
+++ b/assets/100years.html
@@ -36,15 +36,15 @@
     <div id="dates-container">
       
       <div class="ff-dropdown-container">
-        <button onclick="fastForwardDropdown()" id="ffDropbtn">
-          <i class="fa-solid fa-forward" style="color: #040568;"></i>
-        </button>
-        <div id="ff-dropdown-content" class="ff-dropdown-content">
-          <button type="button" onclick="fastForward(1,0,0)">week</button>
-          <button type="button" onclick="fastForward(0,1,0)">month</button>
-          <button type="button" onclick="fastForward(0,0,1)">year</button>
-          <button type="button" onclick="fastForward(0,0,10)">decade</button>
-        </div>
+        <!-- <button onclick="fastForwardDropdown()" id="ffDropbtn"> -->
+          <i class="fa-solid fa-forward" style="color: white;"></i>
+        <!-- </button> -->
+        <!-- <div id="ff-dropdown-content" class="ff-dropdown-content"> -->
+          <button type="button" class="ffbutton" onclick="fastForward(1,0,0)">week</button>
+          <button type="button" class="ffbutton" onclick="fastForward(0,1,0)">month</button>
+          <button type="button" class="ffbutton" onclick="fastForward(0,0,1)">year</button>
+          <button type="button" class="ffbutton" onclick="fastForward(0,0,10)">decade</button>
+        <!-- </div> -->
       </div>
     </div>
     <div id="button-container">
@@ -58,7 +58,7 @@
     <!-- buy/sell -->
     <div class="left-container">
       <div class="dropdown">
-        <button onclick="toggleDropdown();swapPlayAndPause()" class="dropbtn" id="dropbtn">Choose
+        <button onclick="toggleDropdown();" class="dropbtn" id="dropbtn">Choose
           Stock</button>
         <div id="myDropdown" class="dropdown-content">
           <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
