style: changed position + wording of buttons

--- a/assets/100years.html
+++ b/assets/100years.html
@@ -45,8 +45,8 @@
 
     </div>
     <div id="button-container">
-      <button id="home" onclick="goToHome()">Home</button>
       <button id="portfolio" onclick="goToPortfolio();loadPortfolio()">Portfolio</button>
+      <button id="home" onclick="goToHome()">Main Menu</button>
     </div>
   </header>
 
