fix: portfolio loads properly

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -22,10 +22,10 @@
 
       <div class="ff-dropdown-container">
         <i class="fa-solid fa-forward" style="color: white;"></i>
-        <button type="button" class="ffbutton" onclick="fastForward(1,0,0)">week</button>
-        <button type="button" class="ffbutton" onclick="fastForward(0,1,0)">month</button>
-        <button type="button" class="ffbutton" onclick="fastForward(0,0,1)">year</button>
-        <button type="button" class="ffbutton" onclick="fastForward(0,0,10)">decade</button>
+        <button type="button" class="ffbutton" onclick="fastForward(1,0,0);refreshWindow()">week</button>
+        <button type="button" class="ffbutton" onclick="fastForward(0,1,0);refreshWindow()">month</button>
+        <button type="button" class="ffbutton" onclick="fastForward(0,0,1);refreshWindow()">year</button>
+        <button type="button" class="ffbutton" onclick="fastForward(0,0,10);refreshWindow()">decade</button>
       </div>
 
     </div>
