feat: game resets when 100 years is reached, reset button in main menu

--- a/assets/100years.html
+++ b/assets/100years.html
@@ -50,6 +50,12 @@
     </div>
   </header>
 
+  <div id="end-game-popup" class="end-game-popup">
+    <div class="end-game-popup-content">
+      <span id="popup-message">hello</span>
+      <button id="end-game-popup-close" onclick="closeEndPopup()">Close</button>
+    </div>
+  </div>
   
 
   <!-- buy/sell -->
