--- a/assets/100years.html
+++ b/assets/100years.html
@@ -52,7 +52,7 @@
 
   <div id="end-game-popup" class="end-game-popup">
     <div class="end-game-popup-content">
-      <span id="popup-message">hello</span>
+      <span id="popup-message"></span>
       <button id="end-game-popup-close" onclick="closeEndPopup()">Close</button>
     </div>
   </div>
