--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -59,14 +59,39 @@
       <div class="dropdown">
         <button onclick="toggleDropdown();" class="dropbtn" id="dropbtn">Choose
           Education</button>
+        <button onclick="showEducationModal();" id="helpbtn">?</button>
         <div id="myDropdown" class="dropdown-content">
+
           <!-- <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()"> -->
         </div>
       </div>
 
       <div id="result"></div>
 
-      <span class="help">?</span>
+      <div id="educationModal" class="modal">
+        <div class="modal-content">
+          <span class="close" onclick="closeEducationModal()">&times;</span>
+          <!-- Your education content goes here -->
+          <h2>Education and Career</h2>
+          <p>Welcome to the Education and Career simulation!</p>
+          <p>Here's how it works:</p>
+          <ol>
+            <li><strong>Pick a University:</strong> You can choose a university to attend - the more money you have in
+              total balance, the higher the chance of selection.
+            </li>
+            <li><strong>Tuition:</strong> During your education, you'll have to pay tuition over a number of years.</li>
+            <li><strong>Salary:</strong> After completing your education, you'll be given a starting salary based on
+              your choices.</li>
+            <li><strong>Time Progression:</strong> Time will move forward, and you can request raises to increase your
+              salary.</li>
+          </ol>
+          <p>Enjoy your journey towards a successful career!</p>
+        </div>
+      </div>
+
+
+
+
     </section>
 
     <!-- Should be hidden until an offer is accepted then visible for 4 years, then hidden -->
