style: editing how to play page.

--- a/assets/homepage.html
+++ b/assets/homepage.html
@@ -53,53 +53,76 @@
   <div class="modal" id="howToPlayModal">
     <div class="modal-content">
       <button class="close" onclick="closeModal()">&times;</button>
-      <p>
-        <strong>Welcome to Millionaire Tycoon - The Stock Market Simulator Game!</strong>
-        <br><br>
-        <strong>Objective:</strong> Your goal is to generate as much money as you can over the span of 100 years. You
-        start with a $250,000, and your task is to invest wisely in stocks and get an education to grow your wealth.
-        Remember, high scores are recorded on the online leaderboard, so
-        aim to top the charts!
-        <br><br>
-        <strong>Getting Started:</strong>
-      <ul>
-        <li>Click on the "Start Trading Now!" button to begin your journey as a tycoon.</li>
-        <li>Explore the various investment opportunities available to you.</li>
-      </ul>
-      <br>
-      <strong>Investment Options:</strong>
-      <ul>
-        <li><strong>Stock Market Trading:</strong> Buy and sell stocks to make profits. Enter the stock symbol, number
-          of shares, and buy/sell order to execute transactions.</li>
-        <li><strong>Education Simulation:</strong> Choose an education and job to boost your earnings alongside
-          your investments.</li>
-      </ul>
-      <br>
-      <strong>Economic Simulation:</strong>
-      <br>
-      The game simulates a realistic economy with news headlines impacting stock prices and the overall economy. Stay
-      updated with the latest financial news!
-      <br><br>
-      <strong>Managing Your Portfolio:</strong>
-      <br>
-      Use the "Portfolio Management" feature to easily buy and sell stocks at any available quantity.
-      <br><br>
-      <strong>Tips for Success:</strong>
-      <ul>
-        <li>Diversify your investments to minimize risks.</li>
-        <li>Stay informed with news headlines and their impact on company stocks.</li>
-        <li>Manage your portfolio wisely and adapt to market changes.</li>
-      </ul>
-      <br>
-      <strong>Have Fun & Learn:</strong>
-      <br>
-      The game is designed to be engaging and educational. Enjoy learning about the stock market while having fun
-      growing your wealth!
-      <br><br>
-      <strong>Ready to become a Millionaire Tycoon?</strong> Click the "Start Trading Now!" button and let the journey
-      begin! Good
-      luck!
-      </p>
+          <section>
+              <h1>Welcome to Millionaire Tycoon - The Stock Market Simulator Game!</h1>
+
+              <h2>Objective:</h2>
+              <p>
+                  Your goal is to generate as much money as you can over the span of 100 years. You start with a $250,000, and your task is to invest wisely in stocks and get an education to grow your wealth. Remember, high scores are recorded on the online leaderboard, so aim to top the charts!
+              </p>
+
+              <h2>Getting Started:</h2>
+              <ul>
+                  <li>Click on the "Start Trading Now!" button to begin your journey as a tycoon.</li>
+                  <li>Explore the various investment opportunities available to you.</li>
+              </ul>
+
+              <h2>Investment Options:</h2>
+              <ul>
+                  <li>
+                      <strong>Stock Market Trading:</strong> Buy and sell stocks to make profits. Enter the stock symbol, number of shares, and buy/sell order to execute transactions.
+                  </li>
+                  <li>
+                      <strong>Education Simulation:</strong> Choose an education and job to boost your earnings alongside your investments.
+                  </li>
+              </ul>
+
+              <h2>Economic Simulation:</h2>
+              <p>
+                  The game simulates a realistic economy with news headlines impacting stock prices and the overall economy. Stay updated with the latest financial news!
+              </p>
+
+              <h2>Managing Your Portfolio:</h2>
+              <p>
+                  Use the "Portfolio Management" feature to easily buy and sell stocks at any available quantity.
+              </p>
+
+              <h2>Education and Career Path:</h2>
+              <p>
+                  <li>
+                      <strong>Choosing a University:</strong> Navigate to the "Portfolio" menu. Here, players can choose a university to pursue higher education. <br>
+                  </li>
+                  <li>
+                      <strong>Acceptance:</strong> Once a university is selected, the game will determine if the player is accepted. If successful, you'll be offered a spot. <br>
+                  </li>
+                  <li>
+                      <strong>Tuition Fees:</strong> Once accepted, players are required to pay tuition fees for the next 3 in-game years.<br>
+                  </li>
+                  <li>
+                      <strong>Passive Income:</strong> After paying the tuition fees, players will earn a passive income. This will assist players in making investment decisions in the game.<br>
+                  </li>
+                  <li>
+                      <strong>Salary Negotiation:</strong> Players can request a salary increase. If successful, their in-game income will rise. However, be cautious, as there's a possibility your request can be denied.
+                  </li>
+              </p>
+
+              <h2>Tips for Success:</h2>
+              <ul>
+                  <li>Diversify your investments to minimize risks.</li>
+                  <li>Stay informed with news headlines and their impact on company stocks.</li>
+                  <li>Manage your portfolio wisely and adapt to market changes.</li>
+              </ul>
+
+              <h2>Have Fun & Learn:</h2>
+              <p>
+                  The game is designed to be engaging and educational. Enjoy learning about the stock market while having fun growing your wealth!
+              </p>
+
+              <h2>Ready to become a Millionaire Tycoon?</h2>
+              <p>
+                  Click the "Start Trading Now!" button and let the journey begin! Good luck!
+              </p>
+          </section>
     </div>
   </div>
 
