fix: pushed forgotten quantity autofill script

--- a/assets/100years.html
+++ b/assets/100years.html
@@ -103,6 +103,12 @@
       </div>
     </div>
 
+    <script>
+      function setQuantity(value) {
+          document.getElementById('quantity').value = value;
+      }
+    </script>
+
     <div class="row">
       <div class="title">Total Price:</div>
       <div class="bar">
